--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,9 @@ title:               珞珈村下山
 tagline:             每天前进一小步
 description:
 baseurl:            
-url:                http://localhost:4000 #"https://whuxgxj.github.io"  
+url:                 "https://whuxgxj.github.io"  #http://localhost:4000
 github:
-  url:              http://localhost:4000 #"https://whuxgxj.github.io"
+  url:              "https://whuxgxj.github.io" #http://localhost:4000 #
 author:
   name:              "jian11"
   email:             "whuxgxj@gmail.com"
